Gallery is finally here stable
Squashed some bugs in search page, removed more clutter from computer_course.html and
and GALLERY is there

Images used are used for educational purposes. We respect the IP rights of original creators.
If your creation/images are used in accident, you can raise a issue request to get it removed.

Thanks to @Manish and @Krishna

--- a/subjects/subjects.css
+++ b/subjects/subjects.css
@@ -319,8 +319,9 @@ body {
 .click-me a {
 	color: #DF2771;
 	text-decoration: none;
-	transition-duration: .5s;
-	padding: 10px;
+	transition-duration: .4s;
+	padding: 20px;
+	margin: 40px;
 }
 .click-me a:hover {
 	background: #DF2771;
