MEGA UPDATE : ChatGPT API support finally dropped in, About Us Contact Us Page added
ChatGPT is finally with us, you need to get API key which you can get easily from
platform.openai.com and put it in chatgpt/chatgpt.js for apikey variable. Thanks @rootCircle

About Us page is added Thanks to @ Dev

Contact Us page is added Thanks to @ Nimesh

All this was incomplete without bug squashing, so we like usual we fixed few bugs,
removed/repaired broken links/urls and improved some designs

--- a/subjects/subjects.css
+++ b/subjects/subjects.css
@@ -282,9 +282,9 @@ body {
 	background: linear-gradient(to right, #FA4B37, #DF2771);
 	border-radius: 10px;
 }
-.dcard2:hover .fpart2 img {
+/*.dcard2:hover .fpart2 img {
 	display: none;
-}
+}*/
 .dcard2 .fpart2 { 
 	width: inherit;
 	height: 180px;
