--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav ul li a:hover {
 	background: #DF2771;
 }
 .srch {
-	padding: 2px 10px;
+	padding: 10px 10px;
 	display: flex;
 	/* align-items: center; */
 	justify-content: center;
@@ -80,6 +80,67 @@ nav ul li a:hover {
 	border: none;
 	background: transparent;
 }
+
+.btn55 {
+    width: 100px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.btn55:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.btn55:active {
+    color: #000
+}
+
+.btn55:active:after {
+    background: transparent;
+}
+
+.btn55:hover:before {
+    opacity: 1;
+}
+
+.btn55:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
 
 .get-started {
 	margin-left: 50px;
