LOGIN and REGISTRATION feature support and added AI ML courses for registered users
Thanks rootCircle for login part and @ Manish for AI/ML synchorinization
This update also feature some optimisations reducing site-load time by near 98%, thanks to @ Dev

We both are high on coffee, expect bugs brewing here:-)

--- a/loginStyle.css
+++ b/loginStyle.css
@@ -199,3 +199,20 @@ span
 	padding: 10px;
 	font-size: 15px;
 }
+
+#kemp4{ 
+	border: none; 
+	/* background: #fff8; */ 
+	margin-left: 90%; 
+	cursor: pointer; 
+	font-size: 30px; 
+	width: 30px; 
+	opacity: 0.6; 
+	position: absolute; 
+	text-decoration: none; 
+	/* transition: all 3s ease-in-out; */ 
+	} 
+#kemp4:hover{ 
+	opacity: 11; 
+	transform: scale(1.5); 
+}
