--- a/ai_ml/ai_ml.css
+++ b/ai_ml/ai_ml.css
@@ -306,7 +306,7 @@ body {
 	width: 100%;
 	height: 100%;
 }
-.fpart2 iframe {
+.fpart2 a {
 	height: inherit;
 	width: inherit;
 }
@@ -322,6 +322,7 @@ body {
 	transition-duration: .4s;
 	padding: 20px;
 	margin: 40px;
+    background-color: rgb(255, 253, 127);
 }
 .click-me a:hover {
 	background: #DF2771;
