Fixed some bugs | openai keys are now in separate file
Fixed form autoreload on submit in chatgpt and search Thanks to @rootCircle
Gallery background fixes and pop up in gallery page is now working Thanks to @krishnasumit155
Doc template is being updated and now look more beautiful Thanks to @krishnasumit155
Contact Us and About Us pages are updated Thanks to @ akshaj and @manishiiitl1261

--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -255,7 +255,7 @@ a, button {
 	font-size: 50px;
 	text-align: center;
 	color: #fff;
-	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.7)),url("images/extra/b1.jpg");
+	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.7)),url("../images/extra/b1.jpg");
 	background-size: cover;
 	background-attachment: fixed;
 	font-family: cursive;
@@ -678,7 +678,7 @@ footer .btn:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(71, 69, 69, 0.541);
+/*    background-color: rgba(71, 69, 69, 0.541);*/
     z-index: 10;
 }
 
@@ -687,7 +687,7 @@ footer .btn:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color:rgba(0, 0, 0, 0.7);
+/*    background-color:rgba(0, 0, 0, 0.7);*/
     height: 70%;
     width: 50%;
     padding: 20px;
@@ -715,7 +715,7 @@ footer .btn:hover {
 .gallery
 {
 	opacity: 66;
-background-image:url(images/imgs/9.jpg);
+background-image:url(../images/imgs/9.jpg);
 }
 .wrapper {
     display: flex;
