--- a/contactus/contactus.css
+++ b/contactus/contactus.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+
 * {
 	box-sizing: border-box;
 	margin: 0;
