--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -62,13 +62,11 @@ nav ul li a:hover {
 	background: #DF2771;
 }
 .srch {
-	padding: 2px 10px;
+	padding: 10px 10px;
 	display: flex;
 	/* align-items: center; */
 	justify-content: center;
 	/* background: #0066ff; */
-	border: 1px solid;
-	border-radius: 20px;
 }
 .srch img {
 	width: 25px;
@@ -79,6 +77,60 @@ nav ul li a:hover {
 	outline: none;
 	border: none;
 	background: transparent;
+}
+
+.btn55 {
+    width: 100px;
+    height: 30px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.btn55:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.btn55:active {
+    color: #000
+}
+
+.btn55:active:after {
+    background: transparent;
+}
+
+.btn55:hover:before {
+    opacity: 1;
+}
+
+.btn55:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
 }
 
 .get-started {
@@ -729,6 +781,8 @@ background-image:url(../images/imgs/9.jpg);
     border-radius: 12px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 	margin-left:30%;
+	margin-top:5rem;
+	margin-bottom: 2rem;
   }
   .wrapper i.button {
     position: absolute;
