--- a/aboutus/about_web.css
+++ b/aboutus/about_web.css
@@ -32,7 +32,7 @@ body {
 /*NAVIGATION BAR*/
 nav {
 	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 	top: 0;
 	position: fixed;
 	display: flex;
@@ -361,7 +361,8 @@ display:inline-block;
 font-size: 70px;
 color: white;
 margin: 70px 0px 40px 35% ;
-padding-top: 5rem;
+padding-top: 8rem;
+padding-left: 6rem;
 background-color:#3751fa;
 justify-content: center;
 
