--- a/aboutus/about_web.css
+++ b/aboutus/about_web.css
@@ -31,8 +31,8 @@ body {
 
 /*NAVIGATION BAR*/
 nav {
-	padding-top: 10px;
-	padding-bottom: 5px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	top: 0;
 	position: fixed;
 	display: flex;
@@ -52,7 +52,10 @@ nav ul li {
 	margin: 5px 10px;
 }
 nav ul li a {
-	padding: 2px 10px;
+	/* padding: 2px 10px; */
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 1;
 	color: #2e2e2e;
 	cursor: pointer;
 	transition: .5s;
@@ -174,7 +177,7 @@ a, button {
 	background: #fff;
 }
 .logo img{
-	width: 120px;
+	/* width: 120px; */
 	cursor: pointer;
 	transition: all 1s;
 }
@@ -330,7 +333,7 @@ footer .btn:hover {
 	}
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
 	nav ul, nav .search {
 		display: none;
 	}
@@ -354,7 +357,7 @@ footer .btn:hover {
 		margin: 30px;
 		margin-top: 0px;
 	}
-}
+} */
 .head-container
 {
 display:inline-block;
@@ -368,7 +371,7 @@ justify-content: center;
 
 }
 
-.manish
+.context
 {
     display:inline-block;
 	background-color: rgb(232, 225, 225);
@@ -376,7 +379,7 @@ justify-content: center;
 	border: 2px dashed grey;
 	padding: 2.5rem;
 }
-.manish p
+.context p
 {
     font-size: 25px;
 	color: #2e2e2e;
