--- a/aboutus/about_web.css
+++ b/aboutus/about_web.css
@@ -31,8 +31,8 @@ body {
 
 /*NAVIGATION BAR*/
 nav {
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 0px;
+	padding-bottom: 0px;
 	top: 0;
 	position: fixed;
 	display: flex;
@@ -52,10 +52,9 @@ nav ul li {
 	margin: 5px 10px;
 }
 nav ul li a {
-	/* padding: 2px 10px; */
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 1;
+	padding: 2px 5px;
+	/* padding-left: 5px; */
+	/* padding-right: 5px; */
 	color: #2e2e2e;
 	cursor: pointer;
 	transition: .5s;
