--- a/contactus/contactus.css
+++ b/contactus/contactus.css
@@ -260,7 +260,7 @@ body {
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
-	margin-top: 120px;
+	margin-top: 12rem;
 }
 
 h1 {
@@ -389,4 +389,8 @@ footer .btn:hover {
 	margin: 3rem auto;
 	padding: 5rem;
 	color: white;
+}
+
+@media screen {
+	
 }
