--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -764,11 +764,11 @@ footer .btn:hover {
     font-size: 36px;
     cursor: pointer;
 }
-.gallery
+/* .gallery
 {
 	opacity: 66;
 background-image:url(../images/imgs/9.jpg);
-}
+} */
 .wrapper {
     display: flex;
     max-width: 650px;
