--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ header {
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 nav {
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 0px;
+	padding-bottom: 0px;
 	top: 0;
 	position: fixed;
 	display: flex;
@@ -42,10 +42,12 @@ nav ul {
 }
 nav ul li {
 	list-style: none;
-	margin: 5px 10px;
+	margin: 7px 20px;
 }
 nav ul li a {
-	padding: 2px 10px;
+	padding: 2px 5px;
+	/* padding-left: 5px; */
+	/* padding-right: 5px; */
 	color: #2e2e2e;
 	cursor: pointer;
 	transition: .5s;
@@ -974,14 +976,14 @@ footer .btn:hover {
 	nav ul, .srch, .get-started{
 		display: none;
 	}
-	.menu {
-		display: block;
-	}
 	nav {
 		padding-bottom: 20px;
 		border-bottom: 1px solid #0005;
 		/* position: fixed; */
 		/* top: 0; */
+	}
+	.menu {
+		display: block;
 	}
 	.quote p, .quote h5, .play {
 		justify-content: center;
