--- a/search/search.css
+++ b/search/search.css
@@ -2,7 +2,7 @@
 body{
     text-align: center;
     margin-left: auto;
-    background-image: url("../images/bgsh.avif");
+    background-image: url("../images/bgsh.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
