Fixed courses' font size

--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ a, button {
 	padding: 28px;
 	border-radius: 10px;
 	border: 1px solid #FA4B37;
-	font-size: 15px;
+	font-size: 1.2rem;
 	color: #272529;
 	font-family: cursive;
 	text-decoration: none;
