--- a/search/search.css
+++ b/search/search.css
@@ -65,6 +65,7 @@ body{
 
 .card a{
     color:#0D7377;
+    
 }
 
 .card a:hover{
@@ -170,13 +171,14 @@ nav ul li {
 	margin: 7px 20px;
 }
 nav ul li a {
-	padding: 2px 5px;
+/* 	padding: 2px 5px; */
 	/* padding-left: 5px; */
 	/* padding-right: 5px; */
+	padding: 12px 14px;
 	color: #2e2e2e;
 	cursor: pointer;
 	transition: .5s;
-	text-decoration: none;
+	text-decoration: none !important;
 }
 nav ul li a:hover {
 	color: #fff;
