--- a/search/search.css
+++ b/search/search.css
@@ -34,16 +34,6 @@ body{
     margin-left: auto;
 }
 
-.container-fluid{
-    margin: auto auto;
-}
-
-.search-results{
-    width:65%;
-    margin: auto;
-    margin-left: 5rem;
-    margin-bottom: 20rem;
-}
 
 .card{
     margin: 1rem auto;
@@ -55,6 +45,7 @@ body{
     padding-left: 3rem;
     border-radius: 30px;
     opacity: 0.79;
+    margin-right: 9rem;
 }
 
 .card-title{
@@ -330,3 +321,14 @@ a, button {
 .btn69{
 
 }
+
+.container{
+    /* margin:auto; */
+}
+
+.search-results{
+    width:65%;
+    margin-left: 300px;
+    margin-bottom: 20rem;
+}
+
