modification in dashboard,gallery and contact us ---> >dashboard - background,reposive and side menu added >gallery - in gallery font family changes of heading"Gallery" >contactus -  modify the side menu

--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -775,7 +775,8 @@ position:relative;
 .gal h1{
 justify-content: center;
 text-align: center;
-font-size: 3rem;
+font-size: 4rem;
+font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 .wrapper {
     display: flex;
