--- a/contactus/contactus.css
+++ b/contactus/contactus.css
@@ -151,7 +151,7 @@ nav ul li a:hover {
 .side-menu {
 	width: 100%;
 	height: 100%;
-	background: rgba(182, 33, 90, 0.923);
+	background: rgba(167, 182, 33, 0.923);
 	position: absolute;
 	top: 0;
 	transform: translateX(-100%);
@@ -160,24 +160,31 @@ nav ul li a:hover {
 }
 .side-menu ul {
 	margin-top: 7rem;
-	margin-bottom: 5rem;
+	margin-bottom: 8rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	/* background: #FA4B37; */
+	align-content: center;
+    justify-items: center;
+	
+
 }
 .side-menu ul li {
 	list-style: none;
 	/* background: #009900; */
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	 align-items: center;
 	/* border-bottom: 1px solid #fff; */
 	/* padding: 10px 0px; */
+	margin: auto;
+	padding: auto;
+	
 }
 .side-menu ul li:hover a{
 	background: #fff;
-	color: #DF2771;
+	color: #000000;
+	border-radius: 5px;
 }
 .side-menu ul li a{
 	color: #FFF;
