--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -2,41 +2,50 @@
 body{
     text-align: center;
     margin-left: auto;
+    background-image: url("../images/bgsh.jpg");
+    background-repeat:no-repeat;
+    background-size: cover;
 }
 /* ----------------CLASS SELECTORS-------------------------- */
-.heading{
-    /* margin-top: 3rem; */
-    color: #2f2a2a;
-    /* font-size: 10rem; */
-    margin-top:12rem;
+.heading {
+    
+    color: #f5f1f1;
+    margin:8rem;
+    opacity: 10;
+}
+.heading h1{
+font-family: fantasy;
+font-size:4rem;
+opacity: 10;
+}
+.heading h3{
+font-family:fantasy;
+font-size:2rem;
+opacity: 10;
 }
 
 .card{
-    background-color: #d01654;
-    color: #ffffff;
-    align-content: center;
-    justify-content: center;
-    margin: auto;
+    transition: ease-in-out;
+    transition-duration: 0.7s;
+    width:85%;
+    border-radius:20px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.card:hover{
-    /* background-color: #be2864; */
-    /* background-color: #bf446d; */
-    /* transition:cubic-bezier(1, 0, 0, 1); */
-    box-shadow: 0 0 50px rgba(255,255,255,0.8);
+.card:hover{ 
+    box-shadow: 0 0 50px rgba(217, 48, 158, 0.897);
 	/* transform: translateY(-50px); */
-    transform: scale(1.1);
-    transition-duration: .3s;
+    transform: scale(1.08);
+}
+.card img{
+ border-radius: 15px;   
+}
 
-}
-  
-.row a{
-    text-decoration: none;
-    color:#E5E8EF;
-}
 
 .row{
-    margin : 10rem 3rem;
-    margin-top: 5rem;
+    margin : 1rem ;
+    margin-bottom: 1rem;
+    
 }
 /* FOOTER */
 footer {
@@ -114,11 +123,105 @@ footer .btn {
 footer .btn:hover {
     opacity: .7;
 }
+  
+
+
+.logo img{
+	/* width: 120px; */
+	cursor: pointer;
+	transition: all 1s;
+}
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
+
+.get-started {
+	margin-left: 50px;
+	padding: 5px 20px;
+	border: 2px solid #DF2771;
+	border-radius: 20px;
+	text-decoration: none;
+	
+	transition: .5s;
+	background-color: #DF2771;
+	color: #fff;
+}
+.get-started:hover {
+	color: #2e2e2e;
+	background: #fff;
+}
+.logo img{
+	width: 120px;
+	cursor: pointer;
+	transition: all 1s;
+}
+
+.abtn:before,.btnA:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: #ffffff;
+  transition:400ms ease all;
+}
+.abtn:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+.abtn:hover:before,.btnA:hover:after{
+  width:100%;
+  transition:800ms ease all;
+}
+.card-body{
+margin:0px;
+align-items: center;
+}
+.row{
+display: flex;
+flex-wrap: wrap;    
+}
+.stretched-link{
+    background-color: #E5E8EF;
+    color:#000;
+    border:none;
+    position:relative;
+    height:60px;
+    font-size:1.6em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+    margin:auto; 
+    margin-left:rem;
+    justify-content: center;
+    text-align: center;
+    text-decoration:none;
+    font-size: 1.3rem;
+  padding: 10px;
+}
+.stretched-link:hover{
+    background:#e30d49;
+  color:#ffffff; 
+  text-decoration:none;
+  font-size: 1.3rem;
+}
+
+
+.black {
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}
 nav {
-	padding-top: 0px;
-	padding-bottom: 0px;
+	padding-top: 13px;
+	padding-bottom: 10px;
 	top: 0;
-	position: fixed;
+	position: relative;
 	display: flex;
 	width: 100%;
 	z-index: 1000;
@@ -133,12 +236,10 @@ nav ul {
 }
 nav ul li {
 	list-style: none;
-	margin: 7px 20px;
+	margin: 5px 10px;
 }
 nav ul li a {
-	padding: 2px 5px;
-	/* padding-left: 5px; */
-	/* padding-right: 5px; */
+	padding: 11px 14px;
 	color: #2e2e2e;
 	cursor: pointer;
 	transition: .5s;
@@ -149,10 +250,60 @@ nav ul li a:hover {
 	border-radius: 5px;
 	background: #DF2771;
 }
+
+/* SIDE MENU */
+.menu {
+	cursor: pointer;
+	width: 25px;
+	display: none;
+}
+.side-menu {
+	width: 100%;
+	height:100%;
+	background: rgba(182, 177, 33, 0.923);
+	position: absolute;
+	top: 0;
+	 transform: translateX(-100%); 
+	transition: .8s;
+	z-index: 2000;
+}
+.side-menu ul {
+	 margin-top: 7rem;
+	margin-bottom: 8rem; 
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+    align-content: center;
+    justify-items: center;
+}
+.side-menu ul li {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+.side-menu ul li:hover a{
+	background: #fff;
+	color: #000000;
+}
+.side-menu ul li a{
+	color: #FFF;
+	width: 100%;
+	font-size: 1em;
+	text-decoration: none;
+	padding: 15px 0px;
+}
+.close img{
+	float: right;
+	width: 35px;
+	cursor: pointer;
+	margin: 10px;
+}
 .active {
 	color: #fff;
 	border-radius: 5px;
-	background: #DF2771;
+	background:  #DF2771;
 }
 .srch {
 	padding: 10px 10px;
@@ -172,6 +323,7 @@ nav ul li a:hover {
 	background: transparent;
 }
 
+/* SEARCH BUTTON */
 .btn55 {
     width: 100px;
     height: 30px;
@@ -225,128 +377,59 @@ nav ul li a:hover {
     top: 0;
     border-radius: 10px;
 }
-
-a, button {
-	float: left;
-	font-family: "Montserrat", sans-serif;
-	font-weight: 500;
-	font-size: 15px;
-	color: #2E3D49;
-	display: block;
-	text-decoration: none;
-	text-align: center;
-}
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
-
-
-.get-started {
-	margin-left: 50px;
-	padding: 5px 20px;
-	border: 2px solid #DF2771;
-	border-radius: 20px;
-	text-decoration: none;
+@media screen and (max-width: 960px) {
+	.footer-container {
+		max-width: 600px;
+	}
+	.right-col {
+		width: 100%;
+		margin-bottom: 60px;
+	}
+	.left-col {
+		width: 100%;
+		text-align: center;
+	}
+	.social-media {
+		display: flex;
+		justify-content: center;
+	}
+	.logo {
+		transition: 1s;
+		margin-left: 30%;
+	}
+	nav ul, .srch, .get-started{
+		display: none;
+	}
+	.menu {
+		display: block;
+	}
+	nav {
+		padding-bottom: 20px;
+		border-bottom: 1px solid #0005;
+		/* position: fixed; */
+		/* top: 0; */
+	}
+	.quote p, .quote h5, .play {
+		justify-content: center;
+		text-align: center;
+	}
+	.quote p {
+		font-size: 30px;
+	}
+	.service-container .right-side img {
+		width: 90%;
+	}
+	.title {
+		margin-top: 0px;
+	}
 	
-	transition: .5s;
-	background-color: #DF2771;
-	color: #fff;
-}
-.get-started:hover {
-	color: #2e2e2e;
-	background: #fff;
-}
-.logo img{
-	/* width: 120px; */
-	cursor: pointer;
-	transition: all 1s;
-}
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
 }
 
-
-.get-started {
-	margin-left: 50px;
-	padding: 5px 20px;
-	border: 2px solid #DF2771;
-	border-radius: 20px;
-	text-decoration: none;
-	
-	transition: .5s;
-	background-color: #DF2771;
-	color: #fff;
-}
-.get-started:hover {
-	color: #2e2e2e;
-	background: #fff;
-}
-.logo img{
-	width: 120px;
-	cursor: pointer;
-	transition: all 1s;
-}
-/* ----------------------------------------------------------------------------------------------------------------------------------------------- */
- .btnA{
-  background-color: #E5E8EF;
-  color: #111;
-  border:none;
-  position:relative;
-  height:60px;
-  font-size:1.6em;
-  padding:0 2em;
-  cursor:pointer;
-  transition:800ms ease all;
-  outline:none;
-  /* margin:auto; */
-  /* margin-left:rem; */
-}
-.btnA:hover{
-  background:#d01654;
-  color:#ffffff;
-}
-.btnA:before,.btnA:after{
-  content:'';
-  position:absolute;
-  top:0;
-  right:0;
-  height:2px;
-  width:0;
-  background: #ffffff;
-  transition:400ms ease all;
-}
-.btnA:after{
-  right:inherit;
-  top:inherit;
-  left:0;
-  bottom:0;
-}
-.btnA:hover:before,.btnA:hover:after{
-  width:100%;
-  transition:800ms ease all;
-}
-span{
-
-    color: #000;
-    /* margin: auto; */
-}
-span:hover{
-    color: #ffffff;
-}
-.card-body{
-margin:0px;
-align-items: center;
-}
-.row{
-display: flex;
-flex-wrap: wrap;    
-}
-.abtn{
-    align-items: center;
-    padding-left: auto;
+@media screen and (max-width: 700px){
+	.person {
+		display: block;
+		margin: 3rem auto;
+		text-align: center;
+		/* align-content: flex-end; */
+	}
 }
